force-app/main/default/objects/custom_create214__c/custom_create214__c.object-meta.xml
<CustomObject>
    <label>Custom created object214</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects214</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>