force-app/main/default/objects/custom_create214__c/fields/custom_create_214field567__c.field-meta.xml
<CustomField>
    <fullName>custom_create_214field567__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 214field567</label>
    <type>Checkbox</type>
</CustomField>