force-app/main/default/objects/custom_create214__c/fields/custom_create_214field570__c.field-meta.xml
<CustomField>
    <fullName>custom_create_214field570__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 214field570</label>
    <type>Checkbox</type>
</CustomField>