force-app/main/default/objects/custom_create214__c/fields/custom_create_214field576__c.field-meta.xml
<CustomField>
    <fullName>custom_create_214field576__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 214field576</label>
    <type>Checkbox</type>
</CustomField>